# certo

./: .cspell.json  .gitignore  AGENTS.md  CERTO.md  CHANGELOG.md  CONTRIBUTING.md  README.md  certo.toml  mkdocs.yml  pyproject.toml
.certo/: blueprint.toml  spec.toml
.certo/evidence/: k-8210334.json  k-cli-docs.json
.certo/transcripts/: 2026-02-05-verify-0d660cec.jsonl  2026-02-05-verify-4ee34d39.jsonl  2026-02-05-verify-6a45798e.jsonl  2026-02-05-verify-876fd2bf.jsonl  2026-02-05-verify-e46490ac.jsonl  2026-02-05-verify-e905157d.jsonl  2026-02-05-verify-fa1ad342.jsonl  2026-02-06-verify-394f2af2.jsonl  2026-02-06-verify-3a0edf8d.jsonl  2026-02-06-verify-8e477cb8.jsonl  2026-02-08-verify-eef3fd96.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yaml  codeql-analysis.yml  docs.yaml  pypi.yaml
docs/: cli.md  index.md
src/certo/: __init__.py  blueprint.py  check.py  cli.py  cli_util.py  config.py  scan.py  spec.py
src/certo/check/: __init__.py  core.py  fact.py  llm.py  scan.py  selector.py  shell.py  static.py  url.py  verify.py
src/certo/cli/: __init__.py  check.py  claim.py  context.py  init.py  issue.py  kb.py  output.py  plan.py  scan.py  spec.py  status.py
src/certo/evidence/: __init__.py  selector.py  types.py  verify.py
src/certo/kb/: __init__.py  python_stdlib.py  update.py
src/certo/kb/python/: __init__.py
src/certo/kb/python/typeshed/: meta.toml
src/certo/llm/: __init__.py  provider.py  verify.py
src/certo/probe/: __init__.py  core.py  fact.py  llm.py  selector.py  shell.py  url.py  verify.py
src/certo/scan/: __init__.py  python.py
test/: test_blueprint.py  test_certo.py  test_check.py  test_cli.py  test_config.py  test_kb_update.py  test_scan.py  test_spec.py
test/check/: __init__.py  test_claim_verify.py  test_core.py  test_evidence.py  test_fact.py  test_llm.py  test_scan.py  test_selector.py  test_shell.py  test_static.py  test_url.py  test_verify.py
test/check/verify/: conftest.py  test_boolean.py  test_comparison.py  test_glob.py  test_misc.py  test_string_ops.py
test/cli/: __init__.py  test_check.py  test_check_output.py  test_examples.py  test_init.py  test_kb.py  test_main.py  test_plan.py  test_scan.py  test_spec.py  test_spec_examples.py  test_status.py  test_status_examples.py
test/cli/examples/: check_commands.md  check_filters.md  claim.md  claim_check.md  context.md  init.md  issue.md  spec_show_basic.md  spec_show_details.md  spec_show_filters.md  spec_show_json.md  spec_show_status.md  spec_show_timestamps.md  spec_show_verbose.md  status_basic.md  status_details.md  status_filters.md  status_json.md  status_markers.md  status_timestamps.md  status_verbose.md
test/evidence/: __init__.py  test_selector.py  test_types.py  test_verify.py
test/kb/: __init__.py  test_python_stdlib.py
test/llm/: __init__.py  test_provider.py  test_verify.py
test/probe/: test_claim_verify.py  test_core.py  test_evidence.py  test_fact.py  test_llm.py  test_selector.py  test_shell.py  test_url.py
test/probe/verify/: __init__.py  conftest.py  test_boolean.py  test_comparison.py  test_glob.py  test_misc.py  test_string_ops.py
test/proof/: conftest.py  test_proof_infra.py  test_verify_proof.py
test/scan/: __init__.py  test_python.py  test_scan.py
test/spec/: test_checks.py  test_claim.py  test_context.py  test_helpers.py  test_issue.py  test_spec.py
